# c_template

./: .gitignore  00readme  Doxyfile  Makefile.am  configure.ac  readme.textile  readme.txt
include/: doxygen_mainpage.h
spec/: Makefile.am  spec_runner.c
src/: Makefile.am
